# Tetris

./: .project  Tetris.cabal
src/: Board.hs  Component.hs  GameState.hs  Main.hs
