name:           Tetris
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         tkoehler

executable Tetris
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   repa >=3.2.3,
                   lens
  ghc-options:     -Wall -rtsopts -O2
  other-modules:   
                   Board,
                   Component

